# convey-trading-bot

./: .env  decrypt.py  main.py  pyproject.toml  requirements.txt  tester.py
config/: settings.py
core/privy/: client.py
